# files_backup

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  QtBackupWindow.cpp  QtMainWindow.cpp  QtMainWindow.h  QtRestoreWindow.cpp  Qt_backup.qrc  README.md  build.bat  main.cpp  my_pack_and_encode.cpp  my_tar.cpp
include/: QtBackupWindow.h  ui_QtBackupWindow.h  ui_QtMainWindow.h  ui_QtRestoreWindow.h
src/: QtBackupWindow.cpp  QtMainWindow.cpp  QtRestoreWindow.cpp  aesfile.cpp  choose_files.cpp  choose_folder.cpp  main.cpp  my_pack_and_encode.cpp  my_tar.cpp
